fixed circle text spacing

--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -185,7 +185,7 @@ header .download-btn:hover{ -webkit-transform: translateY(-4px); transform: tran
 /* ---------------------------------
 6. ABOUT SECTION
 --------------------------------- */
-
+/* Overwritten */
 .radial-progress{ position: relative; max-width: 250px; margin: 0 auto; }
 
 .radial-progress .progressbar-text{ font-size: 2.2em; font-weight: 500; 
@@ -194,7 +194,7 @@ header .download-btn:hover{ -webkit-transform: translateY(-4px); transform: tran
 .radial-progress .progressbar-text:after{ content:'%'; }
 
 .radial-progress .progress-title{ position: absolute; top: 50%; left: 50%; width: 100%;
-	letter-spacing: 0; text-align: center; transform: translate(15px -50%); color: #777; }
+	letter-spacing: 0; text-align: center; transform: translate(15px, -50%); color: #777; }
 
 	
 
@@ -254,8 +254,8 @@ header .download-btn:hover{ -webkit-transform: translateY(-4px); transform: tran
 
 .radial-progress .progressbar-text:after{ content:'%'; }
 
-.radial-progress .progress-title{ position: absolute; top: 50%; left: 50%; width: 100%;
-	letter-spacing: 0; text-align: center; transform: translate(-50%, 15px); color: #7dcfb6; }
+.radial-progress .progress-title{ position: absolute; top: 50%; left: 50%; width: 80%;
+	letter-spacing: 0; text-align: center; transform: translate(-50%, 5px); color: #7dcfb6; }
 
 	
 	
